# dotfiles

./: .chezmoiignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  LICENSE  Makefile  README.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  on-pr-target-opened.yml  on-pr.yaml  on-push.yml  release-management.yml
src/: .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiexternal.toml.tmpl  .chezmoiignore  dot_Brewfile.tmpl  dot_actrc  dot_direnvrc  dot_editorconfig  dot_profile.tmpl  dot_zprofile  dot_zprofile.tmpl  dot_zshrc
src/.chezmoiscripts/darwin/: run_onchange_after_brew-bundle.sh.tmpl  run_onchange_after_configure.sh  run_onchange_before_install-packages.sh.tmpl
src/.chezmoiscripts/linux/: run_onchange_after_bootstrap.sh
src/.chezmoiscripts/shell/: run_after_update-atuin.sh  run_once_after_install-atuin.sh  run_onchange_after_install-atuin.sh  run_onchange_after_install-nvm.sh  run_onchange_before_install-pyenv.sh
src/.chezmoitemplates/: get-github-head-revision  get-github-latest-version  read-versions-and-revisions-cache
src/dot_config/direnv/: direnv.toml  direnvrc
src/dot_pyenv/: default-packages  version
src/dot_zshrc.d/: 000-color-functions.sh  000-env-vars.sh  000-openssl.sh  000-tcl-tk.sh  000-utils.sh  001-python.sh  001-python.sh.tmpl  001-utils.sh  002-utils-macos.sh  010-autosuggestions.sh  010-docker.sh  010-iterm2.sh  101-docs.sh  999-dedupe-path.sh  999-keybinds.sh
src/private_dot_ssh/: private_config
(+19 files in other folders)
